更新2.1的说明文档

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 <div class="center">
                     <h1 class="lineHeight">Assist使用说明</h1>
                 </div>
-                <img src="resource/images/assist.png" alt="assist图片" width="657">
+                <img src="resource/images/assists.png" alt="assist图片" width="657">
                 <h2 class="lineHeight redColor">
                     Assist介绍:
                 </h2>
