更新2.1的说明文档

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         /com/cmeu/dao中,src/maim/java是源码路径,com/cmeu/dao是项目中的包,这时我们就可以这样写
                         {maim/java}com.cmeu.dao或者{maim.java}com.cmeu.dao    ,CMEU生成的时候就会自动把{maim/java}
                         识别成源码文件夹,把com.cmeu.dao识别为项目中的包,(src)已经在项目跟目录选择添加了,所以src可以不用再写
+                        <span class="redColor">ps:个人觉得这个占位路径是个好东西</span>
                     </p>
                     <h3>更新mapper资源路径: </h3>
                     <p class="indent">如果已经存在MyBatis配置文件,可以输入或者通过按钮选择MyBatis配置文件所在路径,系统将自动将你新建的映射文件自动更新到mappers中;<br/>
