更新为2.1.2的说明文档

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h1 class="lineHeight center">程序主界面</h1>
                 <div class="center">
 
-                    <img src="resource/images/indexss.png" alt="index" width="890">
+                    <img src="resource/images/index.png" alt="index" width="890">
 
                 </div>
                 <h3>工具基本目录结构:</h3>
