更新为2.1.2的说明文档

--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
                 <p>
                     Assist是特别为CMEU定制的查询帮助类,一个项目一个Assist类足以在全部地方使用,生成文件时如果你要继续使用Assist必须选择生成Assist,系统会自动检测是否存在Assist,如果存在Assist系统不会再次创建;如果不存在才会创建;
                 </p>
+                <h3 class="redColor">Assist支持链式操作,既可以new Assist().setRowSize(5).setStartRow(10);</h3>
                 <h3>distinct去重说明:</h3>
                 <p class="indent">distinct为是否去除重复的数据,当需要去重时调用Assist对象的setDistinct(boolean)方法;true为去重,不去重则不需要理会</p>
                 <h3>order排序说明:</h3>
