--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="aboutUs">
     <div class="CMEUBOX">
             <span class="nameBox"><span class="name">MyBaits-CMEU </span><span
-                    class="version"><span> v2.1.2</span></span>
+                    class="version"><span> v2.1.3</span></span>
             </span>
     </div>
     <div class="des">
@@ -74,8 +74,8 @@
         <br/>CMEU有可能使你忘记Mapper怎么写！
     </div>
     <div class="downBox">
-        <a href="https://pan.baidu.com/s/1nuLbS9b#list/path=%2FMyBatis-CMEU2.0" target="_blank">
-            <span class="downLoad">百度云下载</span>
+        <a href="https://gitee.com/duhua/MyBatis-CMEU/releases" target="_blank">
+            <span class="downLoad">前往下载</span>
         </a>
     </div>
 </div>
@@ -596,6 +596,8 @@
                     该参数只在查询全部信息时有用,ById与OfPaging中无效;
                     </span>
                 </p>
+                <h3></h3>
+
                 <h3>require条件集说明:</h3>
                 <p class="indent">
                     require属性为条件集,当查询的时需要条件,就可以调用Assist对象的setRequires(whereRequire...
